--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -1,35 +1,35 @@
 .colaborador {
-  width: 262px;
+  position: relative;
+  width: 280px;
 }
 
 .colaborador .cabecalho {
+  background-color: #f0f0f0;
   border-radius: 10px 10px 0px 0px;
-  height: 92px;
 }
 
 .colaborador img {
   width: 120px;
   border-radius: 50%;
   position: relative;
-  bottom: -40px;
+  bottom: -50px;
 }
 
 .colaborador .rodape {
   background: #ffffff;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
   border-radius: 0px 0px 10px 10px;
-  padding-top: 64px;
+  padding-top: 80px;
   padding-bottom: 40px;
-  margin-bottom: 56px;
-  height: 96px;
+  height: 90px;
 }
 
 .colaborador .rodape h4 {
   color: #6278f7;
   font-size: 18px;
   line-height: 22px;
+  font-weight: bold;
   margin-bottom: 8px;
-  font-weight: 600;
 }
 
 .colaborador .rodape h5 {
@@ -37,4 +37,10 @@
   line-height: 22px;
   color: #212121;
   padding: 0 16px;
+}
+
+.deletar {
+  position: absolute;
+  right: -10px;
+  top: -10px;
 }
