--- a/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -11,6 +11,7 @@
 .lista-suspensa select {
   background-color: #fff;
   box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
+  border-radius: 0px;
   width: 100%;
   border: none;
   font-size: 24px;
