--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -21,7 +21,7 @@
   border-radius: 0px 0px 10px 10px;
   padding-top: 80px;
   padding-bottom: 40px;
-  height: 90px;
+  height: 110px;
 }
 
 .colaborador .rodape h4 {
@@ -43,4 +43,8 @@
   position: absolute;
   right: -10px;
   top: -10px;
+}
+
+.favoritar {
+  margin-top: 20px;
 }
